--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
           node-version: 16
           cache: "npm"
       - run: npm install
-      - run: npm build
+      - run: npm run build
       - name: Release
         if: |
           github.event_name == 'push' &&
