--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nitropack dev playground",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "dist"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
