--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "dependencies": {
     "h3": "^1.5.0",
     "prom-client": "^14.1.1"
-  }
+  },
+  "keywords": [
+    "nitro",
+    "prometheus",
+    "nuxt"
+  ]
 }
