--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nitro-prometheus-middleware",
   "version": "0.0.2",
   "description": "This is a middleware for nitro, that expose metrics for prometheus.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Botz/nitro-prometheus-middleware"
+  },
   "main": "dist/index.mjs",
   "scripts": {
     "build": "unbuild",
@@ -25,6 +29,7 @@
   "keywords": [
     "nitro",
     "prometheus",
+    "nuxt3",
     "nuxt"
   ]
 }
